unpackaged/main/default/objects/FSL_Service_Line_Item__c/FSL_Service_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Service Line Item</label>
    <nameField>
        <displayFormat>SLI - {0000}</displayFormat>
        <label>SLI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>