unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Adjustment_Status__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Status__c</fullName>
    <label>Adjustment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Overrides</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Partially Approved</fullName>
                <isActive>false</isActive>
                <label>Partially Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>