unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Calculated_Unit__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Unit__c</fullName>
    <label>Calculated Quantity (TW/OM)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>