unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Charge_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Charge_to_Account__c</fullName>
    <label>Charge to Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>