unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Cleared_Timestamp_TOD_Code__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Timestamp_TOD_Code__c</fullName>
    <formula>Work_Order__r.Cleared_Timestamp_TOD_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleared Timestamp TOD Code</label>
    <type>Text</type>
</CustomField>