unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>