unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <formula>Work_Order__r.ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility</label>
    <type>Text</type>
</CustomField>