unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/IsDuplicate__c.field-meta.xml
<CustomField>
    <fullName>IsDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To find the duplicate SLI based on the Product</description>
    <label>IsDuplicate</label>
    <type>Checkbox</type>
</CustomField>