unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Old_Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit_Value__c</fullName>
    <label>Old Unit Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>