unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>Product2.ProductCode</field>
            <operation>notEqual</operation>
            <value>CE</value>
        </filterItems>
        <filterItems>
            <field>Product2.ProductCode</field>
            <operation>notEqual</operation>
            <value>CT</value>
        </filterItems>
        <filterItems>
            <field>Product2.Name</field>
            <operation>notEqual</operation>
            <value>CT - Calculated Tow</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Line Items (Product)</relationshipLabel>
    <relationshipName>Service_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>