unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Ready_for_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Invoicing</label>
    <type>Checkbox</type>
</CustomField>