unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Reason_for_Decision__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decision__c</fullName>
    <label>Reason for Decision</label>
    <type>TextArea</type>
</CustomField>