unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Requested_Cost__c.field-meta.xml
<CustomField>
    <fullName>Requested_Cost__c</fullName>
    <label>Requested Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>