unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Requested_Unit__c.field-meta.xml
<CustomField>
    <fullName>Requested_Unit__c</fullName>
    <label>Requested Unit</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>