unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/selectForMultiApprove__c.field-meta.xml
<CustomField>
    <fullName>selectForMultiApprove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>selectForMultiApprove</label>
    <type>Checkbox</type>
</CustomField>