unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>