unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Total_Cost_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Reporting__c</fullName>
    <formula>IF(LEN(TEXT( Total_Price__c )) &gt;= 6,VALUE(LEFT(TEXT( Total_Price__c ),6)) ,VALUE(RPAD(TEXT( Total_Price__c ), 6 , &#39;0&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total_Cost_Reporting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>