unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Trouble_Code__c.field-meta.xml
<CustomField>
    <fullName>Trouble_Code__c</fullName>
    <formula>TEXT(Product__r.Tcode__c)</formula>
    <label>Trouble Code</label>
    <type>Text</type>
</CustomField>