unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Quantity</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>