unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/WO_Pricing_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>WO_Pricing_in_Progress__c</fullName>
    <formula>Work_Order__r.WO_Pricing_In_Progress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WO Pricing in Progress</label>
    <type>Checkbox</type>
</CustomField>