unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Work_Order_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Call_Type__c</fullName>
    <formula>Work_Order__r.Call_Type__c</formula>
    <label>Work Order Call Type</label>
    <type>Text</type>
</CustomField>