unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Work_Order_Clear_Code__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Clear_Code__c</fullName>
    <formula>TEXT(Work_Order__r.Clearing_Code__c)</formula>
    <label>Work Order Clear Code</label>
    <type>Text</type>
</CustomField>