unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Work_Order_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Created_Date__c</fullName>
    <formula>Work_Order__r.CreatedDate</formula>
    <label>Work Order Created Date</label>
    <type>DateTime</type>
</CustomField>