unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Work_Order_RAP_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_RAP_Status__c</fullName>
    <formula>TEXT(Work_Order__r.RAP_Status__c)</formula>
    <label>Work Order RAP Status</label>
    <type>Text</type>
</CustomField>