unpackaged/main/default/objects/FSL_Service_Line_Item__c/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <formula>TEXT(Work_Order__r.Status)</formula>
    <label>Work Order Status</label>
    <type>Text</type>
</CustomField>