unpackaged/main/default/objects/FSL_Service_Line_Item__c/validationRules/Max_Service_Item_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Service_Item_Cost</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Cost__c &gt; 150, BEGINS( $Profile.Name , &quot;FSL Contractor&quot; ))</errorConditionFormula>
    <errorMessage>Service Items are limited to $150 maximum. Please submit a payment request through your normal adjustment process for amounts greater than $150.</errorMessage>
</ValidationRule>