unpackaged/main/default/objects/FSL_Service_Line_Item__c/validationRules/Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Product_Code__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>A service line items cannot be created without a Product</errorMessage>
</ValidationRule>