unpackaged/main/default/objects/FSL_Service_Line_Item__c/validationRules/Restrict_SLI_Update_After_WO_Clear.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_SLI_Update_After_WO_Clear</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
						(( NOW() - Work_Order__r.Cleared_Timestamp__c)*24*60) &gt;  
						$CustomMetadata.FSL_WorkOrder_Configuration__mdt.ACE_Default_WorkOrder_Configuration.Editable_Window_After_Clear_Minutes__c, 
						ISPICKVAL( Work_Order__r.Status , &#39;Cleared&#39;),
				  NOT($Profile.Name=&quot;System Administrator&quot;),
                                  NOT($UserRole.DeveloperName = &quot;Back_Office&quot;)
)</errorConditionFormula>
    <errorMessage>Service line item can not be updated if Work order is Cleared</errorMessage>
</ValidationRule>