unpackaged/main/default/objects/FSL_Service_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Charge_to_Account__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Status__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Cleared_Timestamp_TOD_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Charge_to_Account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Work_Order_Status__c</field>
        <operation>equals</operation>
        <value>Cleared</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Data Migration</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>