unpackaged/main/default/objects/FSL_Service_Line_Item__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Charge_to_Account__c</columns>
    <columns>Adjustment_Status__c</columns>
    <columns>Facility__c</columns>
    <columns>Ready_for_Invoicing__c</columns>
    <columns>Requested_Cost__c</columns>
    <columns>Requested_Unit__c</columns>
    <columns>Tax__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Work_Order__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>7/25/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>contains</operation>
        <value>patricia</value>
    </filters>
    <label>All</label>
</ListView>