unpackaged/main/default/objects/FSL_Service_Line_Item__c/listViews/All_Experience.listView-meta.xml
<ListView>
    <fullName>All_Experience</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Charge_to_Account__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Status__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Cleared_Timestamp_TOD_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>Charge_to_Account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Cost__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Work_Order_Status__c</field>
        <operation>equals</operation>
        <value>cleared</value>
    </filters>
    <label>All (Experience)</label>
    <sharedTo>
        <allPartnerUsers />
    </sharedTo>
</ListView>