unpackaged/main/default/objects/FSL_Service_Line_Item__c/listViews/Pending_Call_Adjustments.listView-meta.xml
<ListView>
    <fullName>Pending_Call_Adjustments</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Created_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Charge_to_Account__c</columns>
    <columns>Requested_Unit__c</columns>
    <columns>Unit__c</columns>
    <columns>Facility__c</columns>
    <columns>Cost__c</columns>
    <columns>Adjustment_Status__c</columns>
    <columns>Reason_for_Decision__c</columns>
    <columns>Cleared_Timestamp_TOD_Code__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Adjustment_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Call Adjustments</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>