unpackaged/main/default/objects/FSL_Service_Line_Item__c/listViews/Rejected_Call_Adjustments_Experience.listView-meta.xml
<ListView>
    <fullName>Rejected_Call_Adjustments_Experience</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Work_Order__c</columns>
    <columns>Facility__c</columns>
    <columns>Product__c</columns>
    <columns>Requested_Unit__c</columns>
    <columns>Unit__c</columns>
    <columns>Requested_Cost__c</columns>
    <columns>Adjustment_Status__c</columns>
    <columns>Reason_for_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Adjustment_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Call Adjustments (Experience)</label>
    <sharedTo>
        <allPartnerUsers />
    </sharedTo>
</ListView>