unpackaged/main/default/objects/FSL_Service_Line_Item__c/listViews/Service_Line_Items_Sakib.listView-meta.xml
<ListView>
    <fullName>Service_Line_Items_Sakib</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Work_Order__c</columns>
    <columns>Facility__c</columns>
    <columns>Product__c</columns>
    <columns>Requested_Unit__c</columns>
    <columns>Requested_Cost__c</columns>
    <columns>Adjustment_Status__c</columns>
    <columns>Reason_for_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>TOLLS-NYC PEAK</value>
    </filters>
    <label>Service Line Items_Sakib</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Delegated_Admin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>